Fix unreadable text on unread inbox entries

--- a/app/assets/stylesheets/components/_inbox-entry.scss
+++ b/app/assets/stylesheets/components/_inbox-entry.scss
@@ -8,6 +8,10 @@
 
       a {
         color: RGB(var(--primary-text));
+
+        &.dropdown-item {
+          color: inherit;
+        }
       }
 
       .text-muted {
